# cache-FingerPrint

./: CMakeLists.txt  cpu-config.c  cpu-config.h  main.c  memorygrammer.c  memorygrammer.h  utils.c  utils.h
data-analysis/: csv-analysis.py  cycles_count.csv  ml-train.py  probe_report.txt  sample_count.csv
